--- a/deep-learning-for-image-processing-v1/pytorch_classification/grad_cam/Test.ipynb
+++ b/deep-learning-for-image-processing-v1/pytorch_classification/grad_cam/Test.ipynb
@@ -21,7 +21,6 @@
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# 加载Grad-CAM生成的saliency map数据\n",
     "import numpy as np\n",
     "import itertools\n",
     "from hmmlearn import hmm\n",
@@ -197,6 +196,14 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "849ef701-daa8-4e44-8c88-9c3bd516e90e",
+   "metadata": {},
+   "source": [
+    "print(emission_probabilities)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "12baf9d9-7436-4e75-913b-82e4e03d02b5",
@@ -309,7 +316,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "id": "fd901901-4d4f-416c-9336-8a86f5a73b23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "f1088b92-ab33-448a-94b1-86ba91431f9a",
    "metadata": {},
    "outputs": [
@@ -317,8 +332,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0.99998644 0.99998429 0.99998371 ... 0.66734973 0.66734438 0.66734057]\n",
       "[]\n",
+      "[0.66733923 0.66733844 0.66733789 ... 0.33305249 0.33305031 0.33304869]\n",
       "[]\n",
+      "[3.33044053e-01 3.33043210e-01 3.33042537e-01 ... 1.22538102e-05\n",
+      " 1.35327914e-06 9.99806531e-07]\n",
       "[]\n",
       "[]\n",
       "[]\n"
@@ -331,7 +350,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(new_regions_indices)\n\u001b[1;32m     14\u001b[0m new_regions_indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mreshape(new_regions_indices, (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m))  \u001b[38;5;66;03m# Reshape to (num_regions, 1)\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m predicted_states \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_regions_indices\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(predicted_states)\n",
+      "Cell \u001b[0;32mIn[23], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(new_regions_indices)\n\u001b[1;32m     15\u001b[0m new_regions_indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mreshape(new_regions_indices, (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m))  \u001b[38;5;66;03m# Reshape to (num_regions, 1)\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m predicted_states \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_regions_indices\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(predicted_states)\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/fyp/lib/python3.9/site-packages/hmmlearn/_emissions.py:27\u001b[0m, in \u001b[0;36m_make_wrapper.<locals>.<lambda>\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_make_wrapper\u001b[39m(func):\n\u001b[0;32m---> 27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m functools\u001b[38;5;241m.\u001b[39mwraps(func)(\u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m)\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/fyp/lib/python3.9/site-packages/hmmlearn/base.py:363\u001b[0m, in \u001b[0;36m_AbstractHMM.predict\u001b[0;34m(self, X, lengths)\u001b[0m\n\u001b[1;32m    346\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, lengths\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    347\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    348\u001b[0m \u001b[38;5;124;03m    Find most likely state sequence corresponding to ``X``.\u001b[39;00m\n\u001b[1;32m    349\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    361\u001b[0m \u001b[38;5;124;03m        Labels for each sample from ``X``.\u001b[39;00m\n\u001b[1;32m    362\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 363\u001b[0m     _, state_sequence \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlengths\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    364\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m state_sequence\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/fyp/lib/python3.9/site-packages/hmmlearn/_emissions.py:27\u001b[0m, in \u001b[0;36m_make_wrapper.<locals>.<lambda>\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_make_wrapper\u001b[39m(func):\n\u001b[0;32m---> 27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m functools\u001b[38;5;241m.\u001b[39mwraps(func)(\u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m)\n",
@@ -347,6 +366,7 @@
     "    region = new_regions[i]\n",
     "    if len(region) > 0:\n",
     "        # \n",
+    "        print(region)\n",
     "        indices = np.where(emission_probabilities[i] == region)[0]\n",
     "        print(indices)\n",
     "        if len(indices) > 0:\n",
