--- a/deep-learning-for-image-processing-v1/pytorch_classification/grad_cam/Untitled.ipynb
+++ b/deep-learning-for-image-processing-v1/pytorch_classification/grad_cam/Untitled.ipynb
@@ -16109,7 +16109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 206,
    "id": "372d5765-e995-41d3-b72a-3914506ebc30",
    "metadata": {},
    "outputs": [
@@ -16215,7 +16215,7 @@
     "\n",
     "# 构建完整数据集\n",
     "data_all = np.concatenate((top_three_cdinates, all_points_coordinates), axis=0)\n",
-    "# print(data)"
+    "# print(data)b"
    ]
   },
   {
@@ -16304,11 +16304,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
+   "id": "3dcaf16a-c972-4e82-b7e7-b3028e9d6436",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#加载Saliency Map数据集\n",
+    "saliency_map = np.load(\"/Users/luopeiyuan/Desktop/FYP/FYP_Codes/deep-learning-for-image-processing/pytorch_classification/grad_cam/ResNet_IMAGE_Folder/DogSaliencyData/10010.npy\")\n",
+    "\n",
+    "# 获取显著度分数\n",
+    "# saliency_scores = np.sum(saliency_map, axis=2)  # 在RGB通道上求和"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
    "id": "d11f75e6-d6d6-4292-b5de-1b8f0f68e041",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "[4.27412084e-06 4.24046635e-06 6.36069952e-06 ... 4.24046635e-06\n",
+      " 4.27412084e-06 6.42800851e-06]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 将显著性图展平为一维向量\n",
+    "saliency_vector = saliency_map.flatten()\n",
+    "\n",
+    "# 对一维向量进行归一化\n",
+    "normalized_vector = saliency_vector / np.sum(saliency_vector)\n",
+    "\n",
+    "print(np.sum(normalized_vector))\n",
+    "\n",
+    "# 如果需要确保归一化后的向量总和为1，则进行如下处理：\n",
+    "# 归一化后的向量总和应为1\n",
+    "normalized_vector = normalized_vector / np.sum(normalized_vector)\n",
+    "print(normalized_vector)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "cb5a8b00-d7fb-471d-8774-59c396ef10e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  3836   3842   5498   7557   8763  11018  12194  18983  23783  23904\n",
+      "  23975  24293  26504  26989  27815  32175  32626  33837  34834  36284\n",
+      "  37403  40009  43137  44205  44271  45966  49451  50503  50835  51137\n",
+      "  51695  52617  54497  54589  57553  57714  58618  59842  59877  60211\n",
+      "  60957  62877  63142  64508  65339  65377  66409  67516  67549  67922\n",
+      "  67955  68536  68599  69230  69421  70284  70940  71129  71474  72010\n",
+      "  73133  73202  73343  73933  75566  75871  75895  75967  76951  77246\n",
+      "  78908  79052  79054  79580  80390  80882  81088  81558  81812  85465\n",
+      "  85627  85726  86213  86295  86361  88865  89769  94951  95236  96524\n",
+      "  97604  97894  97974  98219  98926  99167 100500 102571 102598 102643\n",
+      " 102788 105039 106901 107335 108019 108526 110019 110855 111645 113021\n",
+      " 113784 113983 114684 115055 115425 115626 115893 115915 117877 118979\n",
+      " 120667 121554 121999 122484 124448 126635 128110 129859 131240 132019\n",
+      " 133046 133277 136172 136696 136811 139003 140137 140324 141356 141497\n",
+      " 142321 142535 143333 144160 145237 145405 145489 145562 147119 148607\n",
+      " 150581 150722 151800 151806 154366 155944 156529 156559 156658 158924\n",
+      " 160462 160813 161370 163468 164051 166167 167714 169775 170362 170431\n",
+      " 171693 172507 174740 176981 177426 178301 178652 179141 180300 180770\n",
+      " 181779 181823 182131 182322 183158 183195 183864 184020 184226 184464\n",
+      " 184480 184817 185936 186939 190614 192525 193133 193865 193978 197530\n",
+      " 198335 198754 199274 199601 199662 199745 199802 203742 204379 205187\n",
+      " 205232 205788 207160 207672 208223 208607 209726 209818 210432 215194\n",
+      " 215276 215438 215947 218143 218624 222618 222819 222956 223866 225093\n",
+      " 225359 226238 228538 228541 230584 232188 232837 233778 234142 234656\n",
+      " 236887 237856 240544 242704 242763 243082 243854 244909 245338 246962\n",
+      " 247265 248727 249299 249914 249920 250705 250740 251237 251261 251581\n",
+      " 251734 251763 252056 252402 257789 259364 259558 260215 265881 266546\n",
+      " 266744 267695 267961 268035 270845 272051 272243 272417 274258 274880\n",
+      " 276000 277439 278168 278697 280302 280541 281654 287621 287742 289841\n",
+      " 292474 294440 294457 296342 296993 297128 297474 297487 298464 298521]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_samples = 300\n",
+    "vector_indices = np.arange(len(normalized_vector))\n",
+    "counts = np.random.multinomial(num_samples, normalized_vector)\n",
+    "samples = np.repeat(vector_indices, counts)\n",
+    "print(samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "796ca1b8-01c2-4604-b06b-3803cdfb7f36",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd6d278c-4039-41f1-9725-6fb14a1ef631",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79e27eee-6186-4805-b363-c791588120ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.mixture import GaussianMixture\n",
+    "n_components = 3  # 聚类数量\n",
+    "gmm = GaussianMixture(n_components=n_components)\n",
+    "\n",
+    "samples_data = random.multinormial(\n",
+    "clusters = gmm.fit_predict(data)\n",
+    "top_three_clusters = np.unique(clusters)[:3]\n",
+    "\n",
+    "# 绘制Saliency Map\n",
+    "plt.imshow(saliency_map, cmap='hot')\n",
+    "\n",
+    "# 绘制前三个聚类结果\n",
+    "for i, point in enumerate(data):\n",
+    "    x, y = point\n",
+    "    cluster_label = clusters[i]\n",
+    "    if cluster_label in top_three_clusters:\n",
+    "        if cluster_label == -1:  # 将噪声点标记为黑色\n",
+    "            plt.scatter(y, x, color='black', s=10)\n",
+    "        else:  # 将聚类点用不同颜色标记\n",
+    "            plt.scatter(y, x, color=f'C{cluster_label}', s=10)\n",
+    "\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -16336,8 +16474,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "id": "2c8a8e87-192c-4a0d-9b8d-9a54c3a4957d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 4, 2, 3, 2, 2, 4, 4, 2, 3, 2, 4, 3, 2, 4, 4, 1, 4, 4, 4, 2, 0, 4, 3, 4, 4, 0, 4, 3, 2, 2, 1, 3, 3, 4, 3, 2, 4, 4, 0, 4, 2, 2, 4, 4, 2, 3, 1, 4, 4, 4, 2, 3, 4, 1, 2, 2, 4, 3, 4, 0, 2, 4, 4, 3, 2, 2, 2, 2, 1, 4, 0, 3, 3, 4, 4, 3, 3, 4, 4, 2, 2, 2, 1, 3, 3, 2, 2, 3, 3, 2, 4, 4, 1, 3, 3, 1, 2, 4, 2, 4, 4, 2, 1, 4, 2, 4, 4, 3, 3, 2, 2, 2, 3, 4, 1, 3, 4, 2, 1, 2, 2, 1, 4, 2, 3, 2, 3, 0, 4, 3, 3, 1, 4, 2, 4, 2, 1, 2, 3, 4, 4, 4, 4, 4, 2, 2, 3, 2, 4, 1, 4, 4, 2, 4, 2, 3, 1, 4, 3, 2, 4, 4, 1, 0, 4, 4, 3, 3, 1, 4, 0, 4, 3, 0, 2, 3, 2, 2, 2, 1, 4, 4, 4, 1, 1, 2, 2, 4, 4, 4, 4, 4, 2, 2, 2, 1, 4, 4, 3, 1, 2, 3, 3, 3, 3, 2, 4, 2, 4, 4, 2, 1, 3, 1, 1, 2, 4, 3, 4, 1, 4, 3, 3, 0, 4, 4, 4, 2, 4, 1, 4, 4, 1, 0, 2, 3, 2, 3, 2, 2, 3, 2, 2, 4, 4, 3, 4, 3, 2, 2, 4, 4, 4, 4, 0, 4, 3, 0, 0, 2, 2, 2, 0, 1, 0, 3, 3, 2, 3, 1, 4, 0, 3, 2, 4, 3, 2, 2, 4, 1, 3, 4, 2, 4, 0, 2, 2, 4, 1, 4, 0, 2, 4, 3, 2, 3, 2, 4, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 假设你的数据集\n",
+    "data = [0, 1, 1, 2, 2, 2, 2, 3, 3, 3, 4, 4, 4, 4, 4]\n",
+    "\n",
+    "# 计算概率分布\n",
+    "unique, counts = np.unique(data, return_counts=True)\n",
+    "probabilities = counts / np.sum(counts)\n",
+    "\n",
+    "# 抽取三百组数据\n",
+    "samples = []\n",
+    "for _ in range(300):\n",
+    "    sample = np.random.multinomial(n=1, pvals=probabilities)\n",
+    "    samples.append(unique[np.argmax(sample)])\n",
+    "\n",
+    "print(samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "8dd0480f-df01-4a36-8418-20c229c7f99a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 0 0 1]\n",
+      "[0 0 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 假设你的概率分布数组\n",
+    "probabilities = [0.2, 0.3, 0.1, 0.4]\n",
+    "\n",
+    "# 抽取三百个数据\n",
+    "num_samples = 3\n",
+    "indices = np.arange(len(probabilities))\n",
+    "counts = np.random.multinomial(num_samples, probabilities)\n",
+    "samples = np.repeat(indices, counts)\n",
+    "\n",
+    "print(counts)\n",
+    "print(samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca456dd8-de25-45e3-b8a3-8d2f698fcee0",
    "metadata": {},
    "outputs": [],
    "source": []
